# filemanageportal

./: .dockerignore  .gitignore  Makefile  README.md  dev.sh  docker-compose.supabase.yml  docker-compose.yml  setup.sh
.github/workflows/: README.md  deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  .env.example  .gitignore  .vercelignore  API_DOCUMENTATION.md  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/docs/: db_related.md
backend/migrations/versions/: f955cba56880_auto_migration.py
backend/src/: __init__.py  app.py  auth.py  config.py  models.py  storage.py  supabase_fix.py
backend/src/routes/: __init__.py  auth.py  files.py
backend/tests/: __init__.py  test_app.py
doc/: N_plus_1_explain.md  backend_api_summary.md  chunk_upload.md  frontend_explain.md  models_relation_explain.md  progressbar_explain.md  upload_file_summary.md
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .env.example  .eslintrc.json  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/files/: page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
